hashing salting and jwt added

--- a/LibraryManagement.API/appsettings.json
+++ b/LibraryManagement.API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "Default": "Server=ANKIT;Database=LibraryManagement;Trusted_Connection=true;TrustServerCertificate=true;"
   },
+  "Jwt": {
+    "Issuer": "www.google.com",
+    "Audience" :  "www.google.com",
+    "Key" : "This is my Secret Key @#$%^24456767867875663"
+  },
   "AllowedHosts": "*"
 }
